less/settingspane.less
/*
 * Copyright (c) 2013. Rflect, Alex K.
 */

/* Author:alexeykofficial@gmail.com (Alex K.) */

/* Styles for settings edit pane. */


.settings-pane {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
  background: #fff;
}

.settings-pane-header-cont {
  height: 34px;
  line-height: 34px;
  vertical-align: middle;
  width: 100px;
  padding-left: 20px;
  padding-bottom: 18px;
}

.settings-pane-buttons {
  vertical-align: middle
}

.settings-pane-buttons-upper {
  padding-left: 50px;
  padding-bottom: 18px;
}

.settings-pane-buttons-lower {
  padding-top: 18px;
  padding-left: 170px;
}

.settings-pane-buttons-inner {
  padding: 0;
}

.settings-body-outer {
  border-top: 1px solid #e5e5e5;
  border-bottom: 1px solid #e5e5e5;
}

.settings-body {
  max-width: 700px;
  min-height: 100px;
  margin: 0 auto;
}

.settings-tab-content {
  margin-left: 170px;
}

@media (max-width: 640px) and (orientation: portrait), (max-width: 832px) and
    (orientation: landscape) {
  .settings-tab-content {
    margin-left: 0;
  }
}

.calendars-cont {
  padding: 15px 15px 0 15px;
}

.calendars-outer-cont {
  margin-bottom: 0;
}

.calendars-table {
  table-layout: fixed;
  border-collapse:collapse;
}

.calendar-row {
  cursor: pointer;
}

.calendar-row:hover {
  background: #e5e5e5;
}

.name-cell {
  width: 200px;
}

.color-cell {
  width: 20px;
}

.calendar-colors-label {
  vertical-align: top;
}

.calendar-colors-table {
  table-layout: fixed;
  border-collapse:collapse;
}

.calendar-colors-table td {
  padding: 2px;
}

.calendar-color {
  border-radius: 0;
  transition: opacity @transitionTime;
  border-width: 1px;
  border-style: solid;
}

.calendar-color:hover {
  .opacity(.7);
}

.calendar-color-selected {
  border: black 1px solid !important;
}

.settings-link {
  font: 14px 'Roboto',arial,sans-serif;
  background: none;
  border: none;
  cursor: pointer;
  padding: 8px 6px;
  color: #333;
  text-decoration: none;
}

.calendar-color:focus {
  outline: 1px dotted black;
}

.cal-list-link {
  font-weight: bold;
}

.cal-link {
  padding: 0
}

.cal-link-in-progress {
  color: #888;
  text-decoration: none !important;
  cursor: default;
}

.button-next-pane {
  text-align: left;
  font-size: 16px;
  width: 100%;
  box-sizing: border-box;
  padding: 6px 0;
  transition: color @transitionTime, padding-left @transitionTime;
}

.goog-flat-button-hover.button-next-pane,
.goog-flat-button-focused.button-next-pane {
  color: #007aff;
}

.goog-flat-button-focused.button-next-pane {
  padding-left: 10px;
}

.icon-next-pane {
  position: absolute;
  right: 0;
  top: 16px;
  transition: right @transitionTime;
}

.goog-flat-button-focused.button-next-pane > .icon-next-pane {
  right: 10px;
}

.settings-pane-control {
  float: right;
}

.logged-user-name {
  font-weight: bold;
}

